# libigl-renderer-old

./: CMakeLists.txt  README.md
base/: LibiglMeshRendererT.cc  LibiglMeshRendererT.h  LibiglMeshT.cc  LibiglMeshT.h
cmake/: FindLIBIGL.cmake
include/: LibiglMesh.h
modules/: PCA.h  duplicate_removal.h  duplicates_removal.h  edge_lengths_simple.h  edge_topology_non_manifold.h  merge_meshes.h  remove_duplicates_custom.h  remove_small_components.h  unreferenced_removal.h  upsample_non_manifold.h
renderers/libigl/: LibiglMeshViewer.cc  LibiglMeshViewer.h
renderers/osmesa/: OSMesaMeshRenderer.cc  OSMesaMeshRenderer.h
src/: LibiglMesh.cc  main.cc  mesh_processing.cc  point_set_processing.cc  processing_color_barycenter.cc  processing_disassemble_to_components.cc  processing_disassemble_to_parts.cc  processing_label_contacting_points.cc  processing_label_faces.cc  processing_project_pts_labels_to_mesh.cc  processing_sample_points.cc  processing_subdivide_mesh.cc
utils/: eigen3-hdf5.hpp  kd_tree.h  mrf_potts.h  utils.cc  utils.h
utils/TRW_S-v1.3/: MRFEnergy.h
